[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Levels/Level Components/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Player/Game_Player_Resource_Bar.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Player/Game_Player_Resource_Heart.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Player/Game_Player_Resource_Berry.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/Frick_Regular.tres" type="DynamicFont" id=5]

[node name="Player" type="Node2D"]
script = ExtResource( 1 )

[node name="Health_Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_rotation = 10.4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health_Bar" type="Sprite" parent="Health_Control"]
texture = ExtResource( 2 )

[node name="Health_Icon" type="Sprite" parent="Health_Control"]
position = Vector2( 240.064, 9.32355 )
scale = Vector2( 0.52, 0.52 )
texture = ExtResource( 3 )

[node name="Health" type="Control" parent="Health_Control"]
margin_left = 172.279
margin_right = 212.279
margin_bottom = 40.0
rect_scale = Vector2( 1.33409, 1.33409 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="Health_Control/Health"]
margin_left = -294.73
margin_top = -52.7563
margin_right = 44.2704
margin_bottom = 189.243
rect_scale = Vector2( 0.947225, 0.947225 )
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
tab_size = 0
text = "75"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Berry_Control" type="Control" parent="."]
margin_left = -3.56763
margin_top = 254.49
margin_right = 36.4324
margin_bottom = 294.49
rect_rotation = 10.4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Berry_Bar" type="Sprite" parent="Berry_Control"]
texture = ExtResource( 2 )

[node name="Berry_Icon" type="Sprite" parent="Berry_Control"]
position = Vector2( 240.064, 9.32355 )
scale = Vector2( 0.52, 0.52 )
texture = ExtResource( 4 )

[node name="Berry" type="Control" parent="Berry_Control"]
margin_left = 144.928
margin_right = 184.928
margin_bottom = 40.0
rect_scale = Vector2( 1.03201, 1.03201 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="Berry_Control/Berry"]
margin_left = -374.956
margin_top = -52.7563
margin_right = -35.9557
margin_bottom = 189.243
rect_scale = Vector2( 0.947225, 0.947225 )
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
tab_size = 0
text = "0/4"
__meta__ = {
"_edit_use_anchors_": false
}
